(Cleanup) Refactoring